  and CalMaTeCalibration so that it is possible use previous versions
  of CalMaTe model estimators.  The flavor is now reflected in the
  "asterisk" (the default) tags of CalMaTeCalibration.
o SPEEDUP: the internal CalMaTe fit function is now called directly,
  which avoids the method dispatch overhead that otherwise applies 
  to each SNP fitted.


Version: 0.7.4 [2012-02-06]
o Now additional arguments '...' of CalMaTeCalibration(...) are
  passed to calmateByTotalAndFracB() by process().  This makes
  it possible to specify all tuning parameters of the CalMaTe method.
o DEPRECATED: Now argument 'references' of process() is obsolete and
  gives an error.  Specify it via CalMaTeCalibration() instead.


Version: 0.7.3 [2012-01-31]
o Updated package dependencies.
o BUG FIX: The bug fix in v0.7.2 for handling the special case where
  a SNP has the same genotype in all samples introduced another bug
  giving incorrect results in that special case.


Version: 0.7.2 [2011-11-15]
o ROBUSTNESS: Improved validation of argument 'references' to
  CalMaTeCalibration(), calmateByTotalAndFracB(), and calmateByThetaAB().
o DOCUMENTATION: Added a section 'Reference samples' to the help
  of CalMaTeCalibration.
o DEPRECATED: Argument 'references' of process() of CalMaTeCalibration
  is deprecated.  Instead, pass it to CalMaTeCalibration().
o ROBUSTNESS/BUG FIX: If in some SNPs, the samples include only a single
  genotype (usually AA or BB), the genotype AA is interpreted as BB in
  half of the samples and vice versa (and the returned value is
  reversed again). There was a bug in the code that occurred iff all
  the reference samples have the same genotype and the number of 
  reference samples is smaller than half of the total number of samples.


Version: 0.7.1 [2011-11-30]
o DOCUMENTATION: Updated links on help pages.
o Updated package dependencies.


Version: 0.7.0 [2011-10-24]
o Added a NAMESPACE.


Version: 0.6.7 [2011-09-16]
o Added missing authors to the DESCRIPTION.

